# oacapture-mod

./: .ycm_extra_conf.py  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  modinstall.sh  ycmlog
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
ext/: Makefile  Makefile.am  Makefile.in
ext/ffmpeg/: config.asm  config.fate  config.h  config.mak
ext/libdc1394/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libdc1394-2.pc  libtool
ext/libhidapi/: Makefile.am
ext/libhidapi/libusb/: Makefile.am  hid.c
ext/libusb/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
ext/libuvc/: Makefile  Makefile.in
ext/libwindib/: Makefile  Makefile.in  libwindib.la  pipp_avi_write.lo  pipp_avi_write_dib.lo  pipp_buffer.lo  pipp_utf8_linux.lo
include/openastro/: camera.h
liboaPTR/: Makefile  Makefile.am  Makefile.in  liboaPTR.la  oaptr.lo  ptr-udev.lo  ptrCallback.lo  ptrConfig.lo  ptrConnect-udev.lo  ptrControl.lo  ptrController.lo  ptrIO-udev.lo  unimplemented.lo
liboaPTR/.deps/: debug.Plo  oaptr.Plo  ptr-udev.Plo  ptrCallback.Plo  ptrConfig.Plo  ptrConnect-udev.Plo  ptrControl.Plo  ptrController.Plo  ptrIO-udev.Plo  unimplemented.Plo  utils.Plo
liboaPTR/.libs/: liboaPTR.la  liboaPTR.lai
liboaSER/: Makefile  Makefile.am  Makefile.in  liboaSER.la  oaSER.lo
liboaSER/.deps/: oaSER.Plo
liboaSER/.libs/: liboaSER.la  liboaSER.lai
liboacam/: Altaircontrol.c  Altaircontroller.c  Altairoacam.c  Altairoacam.h  EUVCcallback.lo  EUVCconnect.c  EUVCconnect.lo  EUVCcontrol.c  EUVCcontrol.lo  EUVCcontroller.c  EUVCcontroller.lo  EUVCgetState.lo  EUVCoacam.c  EUVCoacam.h  EUVCoacam.lo  EUVCroi.lo  EUVCusb.lo  IIDCcallback.lo  IIDCconnect.lo  IIDCcontrol.c  IIDCcontrol.lo  IIDCcontroller.c  IIDCcontroller.lo  IIDCgetState.lo  IIDCoacam.h  IIDCoacam.lo  IIDCstate.h  Makefile  Makefile.am  Makefile.in  Mallincamcontrol.c  Mallincamcontroller.c  Mallincamoacam.c  Mallincamoacam.h  PGEcontrol.c  PGEoacam.h  PWCconnect.lo  PWCgetState.lo  PWCoacam.lo  QHY5.lo  (+78 more)
liboacam/.deps/: EUVCcallback.Plo  EUVCconnect.Plo  EUVCcontrol.Plo  EUVCcontroller.Plo  EUVCgetState.Plo  EUVCoacam.Plo  EUVCroi.Plo  EUVCusb.Plo  IIDCcallback.Plo  IIDCconnect.Plo  IIDCcontrol.Plo  IIDCcontroller.Plo  IIDCgetState.Plo  IIDCoacam.Plo  PWCconnect.Plo  PWCgetState.Plo  PWCoacam.Plo  QHY5.Plo  QHY5II.Plo  QHY5IIcontroller.Plo  QHY5LII.Plo  QHY5LIIcontroller.Plo  QHY5controller.Plo  QHY6.Plo  QHY6controller.Plo  QHYcallback.Plo  QHYconnect.Plo  QHYcontrol.Plo  QHYfirmware.Plo  QHYgetState.Plo  QHYoacam.Plo  QHYusb.Plo  SXcallback.Plo  SXconnect.Plo  SXcontrol.Plo  SXcontroller.Plo  SXgetState.Plo  SXoacam.Plo  UVCcallback.Plo  UVCconnect.Plo  (+28 more)
liboacam/.libs/: liboacam.la  liboacam.lai
liboademosaic/: Makefile  Makefile.am  Makefile.in  bilinear.lo  liboademosaic.la  nearestNeighbour.lo  oademosaic.lo  smoothHue.lo  vng.lo
liboademosaic/.deps/: bilinear.Plo  nearestNeighbour.Plo  oademosaic.Plo  smoothHue.Plo  vng.Plo
liboademosaic/.libs/: liboademosaic.la  liboademosaic.lai
liboafilterwheel/: Makefile  Makefile.am  Makefile.in  liboafilterwheel.la  oafw.lo  oafwprivate.h  sxCallback.lo  sxConfig.lo  sxConnect.c  sxConnect.lo  sxControl.lo  sxController.lo  sxIO.lo  sxfw.c  sxfw.lo  xagylCallback.lo  xagylConfig.lo  xagylConnect-udev.lo  xagylControl.lo  xagylController.lo  xagylIO-udev.lo  xagylfw-udev.lo
liboafilterwheel/.deps/: debug.Plo  oafw.Plo  sxCallback.Plo  sxConfig.Plo  sxConnect.Plo  sxControl.Plo  sxController.Plo  sxIO.Plo  sxfw.Plo  unimplemented.Plo  utils.Plo  xagylCallback.Plo  xagylConfig.Plo  xagylConnect-udev.Plo  xagylControl.Plo  xagylController.Plo  xagylIO-udev.Plo  xagylfw-udev.Plo
liboafilterwheel/.libs/: liboafilterwheel.la  liboafilterwheel.lai
liboaimgproc/: Makefile  Makefile.am  Makefile.in  focus.lo  gauss.lo  liboaimgproc.la  scharr.lo  sobel.lo  stackMean.lo  stackSum.lo
liboaimgproc/.deps/: focus.Plo  gauss.Plo  scharr.Plo  sobel.Plo  stackMean.Plo  stackSum.Plo
liboaimgproc/.libs/: liboaimgproc.la  liboaimgproc.lai
liboautil/: Makefile  Makefile.am  Makefile.in  exp10.lo  liboautil.la  llist.lo
liboautil/.deps/: exp10.Plo  llist.Plo
liboautil/.libs/: liboautil.la  liboautil.lai
liboavideo/: Makefile  Makefile.am  Makefile.in  liboavideo.la  oavideo.lo  yuv.lo
liboavideo/.deps/: oavideo.Plo  yuv.Plo
oacapture/: Makefile  Makefile.am  Makefile.in  Makefile.old  README  asi_zmq.h  asi_zmq_publish.cc  camera.cc  cameraWidget.cc  captureSettings.cc  captureWidget.cc  captureWidget.h  controlWidget.cc  demosaicSettings.cc  fitsSettings.cc  mainWindow.cc  mainWindow.h  moc_autorunSettings.cc  moc_camera.cc  moc_cameraSettings.cc  moc_cameraWidget.cc  moc_captureWidget.cc  moc_controlWidget.cc  moc_filterSettings.cc  moc_fitsSettings.cc  moc_generalSettings.cc  moc_imageWidget.cc  moc_mainWindow.cc  moc_previewWidget.cc  moc_timerSettings.cc  moc_zoomWidget.cc  oaCapture-20160829-234430.avi  outputDIB.cc  outputDIB.h  outputFFMPEG.cc  outputFFMPEG.h  outputFITS.cc  outputFITS.h  outputHandler.h  outputSER.cc  (+7 more)
oalive/: Makefile  Makefile.am  Makefile.in  advancedSettings.h  advancedSettings.h.rej  camera.cc  camera.h  cameraControls.h  captureSettings.h  controlsWidget.h  demosaicSettings.h  filterSettings.h  filterWheel.h  focusOverlay.h  generalSettings.h  mainWindow.cc  mainWindow.h  moc_advancedSettings.cc  moc_cameraControls.cc  moc_captureSettings.cc  moc_controlsWidget.cc  moc_focusOverlay.cc  moc_generalSettings.cc  moc_mainWindow.cc  moc_profileSettings.cc  moc_saveControls.cc  moc_settingsWidget.cc  moc_stackingControls.cc  moc_viewWidget.cc  oalive  outputFITS.cc  outputHandler.h  profileSettings.h  qrc_oalive.cc  qtgui_all_includes.h  saveControls.cc  saveControls.h  settingsWidget.h  stackingControls.h  viewWidget.h
osx/: oacapture.plist
udev/: 70-asi-cameras.rules  70-starlight-xpress.rules  70-tis-cameras.rules  85-qhy-cameras.rules  Makefile
(+280 files in other folders)
